Correction démo C# et renomage fichiers

--- a/0. Démos/CoursAston/C01_BasesPOO/C01_BasesPOO.csproj
+++ b/0. Démos/CoursAston/C01_BasesPOO/C01_BasesPOO.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\01_MesClasses\01_MesClasses.csproj" />
+    <ProjectReference Include="..\C01_MesClasses\C01_MesClasses.csproj" />
   </ItemGroup>
 
 </Project>
