Ajout notions pour Exo 05

--- a/0. Démos/CoursAston/C03_WebAPI/C03_WebAPI.csproj
+++ b/0. Démos/CoursAston/C03_WebAPI/C03_WebAPI.csproj
@@ -4,10 +4,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>663d9e8a-2c63-4496-a2f4-9b6a31e8ff26</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
   </ItemGroup>
 
 </Project>
