--- a/0. Démos/CoursAston/C04_ADONet/C04_ADONet.csproj
+++ b/0. Démos/CoursAston/C04_ADONet/C04_ADONet.csproj
@@ -5,9 +5,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>b4f74ec8-2943-4514-8e23-835ae8206e6c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
