--- a/ExempleQueueAzureMessage/ServicesPackage/ServicesPackage.csproj
+++ b/ExempleQueueAzureMessage/ServicesPackage/ServicesPackage.csproj
@@ -1,17 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
+        <RootNamespace>Services</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Azure.Storage.Common" Version="12.10.0" />
       <PackageReference Include="Azure.Storage.Queues" Version="12.9.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\ServicesPackage\ServicesPackage.csproj" />
     </ItemGroup>
 
 </Project>
