--- a/ExempleQueueAzureMessage/ServicesPackage/ServicesPackage.csproj
+++ b/ExempleQueueAzureMessage/ServicesPackage/ServicesPackage.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Identity" Version="1.5.0" />
       <PackageReference Include="Azure.Storage.Queues" Version="12.9.0" />
     </ItemGroup>
 
