--- a/ExempleBlob/ExempleBlob/ExempleBlob.csproj
+++ b/ExempleBlob/ExempleBlob/ExempleBlob.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Identity" Version="1.5.0" />
         <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0" />
         <PackageReference Include="Azure.Storage.Common" Version="12.10.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
