--- a/3. ASP.NET et Applications Webs/2. Exercices/SolutionExercices/TP02/TP02.csproj
+++ b/3. ASP.NET et Applications Webs/2. Exercices/SolutionExercices/TP02/TP02.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.6.0" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0" />
+    <PackageReference Include="Azure.Storage.Common" Version="12.10.0" />
+  </ItemGroup>
+
 </Project>
