bin/se de données azure

--- a/3. ASP.NET et Applications Webs/2. Exercices/SolutionExercices/TP05/appsettings.json
+++ b/3. ASP.NET et Applications Webs/2. Exercices/SolutionExercices/TP05/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString" : {
+    "Default": "Server=tcp:utopios-aston.database.windows.net,1433;Initial Catalog=ihab;Persist Security Info=False;User ID=aston-admin;Password=sqlserver123.;MultipleActiveResultSets=False;TrustServerCertificate=True;Connection Timeout=30;"
+  },
+  "JWT": {
+    "SecretKey": "This is my Secret Key than never you will find ",
+    "ValidIssuer": "Aston",
+    "ValidAudience": "Aston"
+  }
 }
