exemple avec active directory

--- a/3. ASP.NET et Applications Webs/2. Exercices/SolutionExercices/TP05/appsettings.json
+++ b/3. ASP.NET et Applications Webs/2. Exercices/SolutionExercices/TP05/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionString" : {
-    "Default": "Server=tcp:utopios-aston.database.windows.net,1433;Initial Catalog=ihab;Persist Security Info=False;User ID=aston-admin;Password=sqlserver123.;MultipleActiveResultSets=False;TrustServerCertificate=True;Connection Timeout=30;"
+    "Default": "Server=tcp:utopios-aston.database.windows.net,1433;Initial Catalog=ihab;Persist Security Info=False;User ID=d36ea472-ac2b-4bc7-a04e-e601dd407299;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Authentication=\"Active Directory Integrated\""
   },
   "JWT": {
     "SecretKey": "This is my Secret Key than never you will find ",
